[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scripts/DaggersControl.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Dagger.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Dagger/dagger.png" type="Texture" id=3]
[ext_resource path="res://Scripts/DaggerUpDown.gd" type="Script" id=4]

[node name="Daggers" type="Node2D"]

editor/display_folded = true
script/script = ExtResource( 1 )

[node name="Dagger" type="Sprite" parent="." instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( 712, 1595 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="Dagger1" type="Sprite" parent="." instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( 712, 3872 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="Dagger2" type="Sprite" parent="." instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( 712, 5896 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="Dagger3" type="Sprite" parent="." instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( 712, 8173 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )


